# oran-nephio-rag

./: .coverage  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  =1.24.0  =4.0.0  API_MODES_GUIDE.md  CLAUDE.md  COMPLETE_TOOLKIT_SUMMARY.md  DEPLOYMENT.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  Dockerfile.production  EXPERIMENTAL_PUTER_INTEGRATION.md  FINAL_PROJECT_STATUS.md  FIX_REPORT.md  FIX_SUMMARY.md  GITHUB_ACTIONS_FIX.md  GITHUB_ACTIONS_FIX_SUMMARY.md  GIT_COMMIT_SUCCESS.md  Gemfile  INDEX_HTML_UPDATE_SUMMARY.md  PROJECT_VERIFICATION_REPORT.md  PUTER_API_ANALYSIS.md  PUTER_INTEGRATION_GUIDE.md  QUICK_DEPLOY.md  QUICK_FIX_GUIDE.md  README.md  README_NEW.md  SYSTEM_STATUS_REPORT.md  TEST_ANALYSIS_REPORT.md  TYPE_CHECKING_REPORT.md  _config.yml  cleanup_report.json  config.py  coverage.xml  create_minimal_database.py  demo_system.py  docker-compose.dev.yml  (+44 more)
.claude/: settings.local.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: ci.yml  comprehensive-ci.yml  pages.yml
.kiro/steering/: product.md  structure.md  tech.md
_includes/: head.html
_layouts/: default.html
_pages/: documentation.md
assets/scripts/: main.js
assets/styles/: main.css
config/: mypy.ini
docker/: TROUBLESHOOTING.md
docker/config/: development.env  production.env
docker/monitoring/: alert-rules.yml  grafana-dashboards.json  grafana-provisioning.yml  logstash.conf  prometheus-prod.yml  prometheus.yml
docker/nginx/: dev.conf  prod.conf
docker/scripts/: cleanup.sh  deploy.sh  entrypoint-prod.sh  entrypoint.sh
docs/: CODE_QUALITY_REVIEW_REPORT.md  DOCKER_DEPLOYMENT.md  README.md  SETUP.md  comprehensive-code-review-report.md
docs/api/: README.md  openapi.yaml
docs/architecture/: c4-diagrams.md  comprehensive-rag-architecture.md
docs/deployment/: docker-guide.md  kubernetes-guide.md  kubernetes-manifests.yaml
docs/examples/: integration-examples.md  nephio-scenarios.md  oran-queries.md
docs/guides/: configuration.md  environment-setup.md  quick-start.md  troubleshooting.md
docs/reports/: CONTEXT_SUMMARY.md  CRITICAL_FIXES_ACTION_PLAN.md
examples/: example_usage.py  init.py
memory/: memory-store.json
memory/agents/: README.md
memory/sessions/: README.md
monitoring/: alert_rules.yml  alertmanager.yml  grafana-dashboard.json  grafana-dashboards.yml  grafana-datasources.yml  otel-collector-config.yml  prometheus.yml  recording_rules.yml
scripts/: auto_sync.py  clean_commits.sh  clean_commits_complete.sh  commit1.txt  commit2.txt  commit3.txt  rewrite_commits.py  test_system.py
src/: __init__.py  advanced_embeddings.py  api_adapters.py  async_rag_system.py  config.py  document_loader.py  document_preprocessor.py  enhanced_llm_integration.py  enhanced_rag_system.py  init.py  monitoring.py  oran_nephio_rag.py  oran_nephio_rag_fixed.py  performance_monitor.py  puter_integration.py  retrieval_engine.py  simple_monitoring.py  smart_chunking.py  vector_database_manager.py
src/api/: __init__.py  auth.py  error_handlers.py  main.py  middleware.py  models.py  requirements.txt
src/api/routers/: __init__.py  documents.py  health.py  queries.py  system.py
src/utils/: helpers.py
test_reports/: junit_report.xml
tests/: README.md  README_MOCKING_GUIDE.md  conftest.py  init.py  pytest.ini  test_api_endpoints.py  test_api_modes.py  test_browser_automation.py  test_comprehensive_integration_mocked.py  test_comprehensive_reporting.py  test_config.py  test_config_isolated.py  test_core_rag_components.py  test_document_loader.py  test_document_loading_mocked.py  test_e2e.py  test_edge_cases_errors.py  test_fixtures_utilities.py  test_integration_comprehensive.py  test_integration_pipeline.py  test_mock_data_scenarios.py  test_performance_benchmarks.py  test_puter_integration_mocked.py  test_puter_rag_system.py  test_rag_system.py  test_response_accuracy.py  test_utils.py  test_vectordb_mocked.py  test_verification_simple.py
tests/api/: test_main.py  test_queries.py
